# BciSift

./: .gitignore  BciSift.pro  CMakeLists.txt  Makefile  Makefile.Debug  Makefile.Release  README.md  TestVLFeatDescriptor.m  bcisift.cpp  clean.sh  compilacion-python.md  compile.sh  dsp.cpp  dsp.h  eegimage.cpp  eegimage.h  labelrange5.csv  lsl.cpp  lsl.h  lsltransmitter.cpp  main.cpp  plotprocessing.cpp  plotprocessing.h  prerun.sh  pybcisiftsample.py  scalespace.cpp  serializer.cpp  test_mat  test_mat.cpp  unp.cpp  unp.h
Plots/: s.1.e.1.l.1.c.1.tif  s.1.e.1.l.1.c.2.tif  s.1.e.1.l.1.c.3.tif  s.1.e.1.l.1.c.4.tif  s.1.e.1.l.1.c.5.tif  s.1.e.1.l.1.c.6.tif  s.1.e.1.l.1.c.7.tif  s.1.e.1.l.1.c.8.tif  s.1.e.10.l.2.c.1.tif  s.1.e.10.l.2.c.2.tif  s.1.e.10.l.2.c.3.tif  s.1.e.10.l.2.c.4.tif  s.1.e.10.l.2.c.5.tif  s.1.e.10.l.2.c.6.tif  s.1.e.10.l.2.c.7.tif  s.1.e.10.l.2.c.8.tif  s.1.e.100.l.2.c.1.tif  s.1.e.100.l.2.c.2.tif  s.1.e.100.l.2.c.3.tif  s.1.e.100.l.2.c.4.tif  s.1.e.100.l.2.c.5.tif  s.1.e.100.l.2.c.6.tif  s.1.e.100.l.2.c.7.tif  s.1.e.100.l.2.c.8.tif  s.1.e.101.l.1.c.1.tif  s.1.e.101.l.1.c.2.tif  s.1.e.101.l.1.c.3.tif  s.1.e.101.l.1.c.4.tif  s.1.e.101.l.1.c.5.tif  s.1.e.101.l.1.c.6.tif  s.1.e.101.l.1.c.7.tif  s.1.e.101.l.1.c.8.tif  s.1.e.102.l.1.c.1.tif  s.1.e.102.l.1.c.2.tif  s.1.e.102.l.1.c.3.tif  s.1.e.102.l.1.c.4.tif  s.1.e.102.l.1.c.5.tif  s.1.e.102.l.1.c.6.tif  s.1.e.102.l.1.c.7.tif  s.1.e.102.l.1.c.8.tif  (+26840 more)
Plotsbasic/: s.1.e.1.l.1.c.1.tif  s.1.e.1.l.1.c.2.tif  s.1.e.1.l.1.c.3.tif  s.1.e.1.l.1.c.4.tif  s.1.e.1.l.1.c.5.tif  s.1.e.1.l.1.c.6.tif  s.1.e.1.l.1.c.7.tif  (+26873 more)
(+25 files in other folders)
